HelloUltraviolet/Fixtures/RejectedSource/Expressions/FloatLiteralExplicitRequirement/Source/Main.uv
//! Rejected float literal specimen for explicit suffix checking.

public procedure floatLiteralExplicitRequirementReference() -> f32 {
    return 1.0f64
}
